maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:19: error: ';' expected but ')' found.
  prendBiscuit())
                ^