maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  getMeOutOfHere()
}

def getMeOutOfHere() {
  while (!estSurBiscuit()) {
    while (murAGauche()) {
      if (!estFaceMur()) { 
        avance()
        if (estSurBiscuit())
          prendBiscuit()
      } else {
        droite()
      }
    }
    gauche()
    avance()
  }
  prendBiscuit())
}

def murAGauche():Boolean = {
  gauche()
  if (estFaceMur())
  	droite()
  	return true
  droite()
  return false
}